# substraTEE-node

./: Cargo.toml
pow/: Cargo.toml
pow/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
sr-tee-io/: Cargo.toml  with_sgx.rs  with_std.rs  without_std.rs
sr-tee-io/src/: lib.rs
src/: cli.rs  service.rs
substratee-executor/: Cargo.toml
substratee-executor/wasm/: Cargo.toml
