[package]
name = "substratee-node"
version = "4.0.1"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"
[profile.release]
panic = "unwind"

[[bin]]
name = "substratee-node"
path = "src/main.rs"

# to run cargo test with dev-dependencies it must be part of a workspace
#[workspace]
#members = [ "runtime",
#            "host_calls"]

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

[dependencies.sr-io]
git = "https://github.com/scs/substrate"

[dependencies.substrate-cli]
git = "https://github.com/scs/substrate"

[dependencies.primitives]
git = "https://github.com/scs/substrate"
package = "substrate-primitives"

[dependencies.substrate-executor]
git = "https://github.com/scs/substrate"

[dependencies.substrate-service]
git = "https://github.com/scs/substrate"

[dependencies.inherents]
git = "https://github.com/scs/substrate"
package = "substrate-inherents"

[dependencies.transaction-pool]
git = "https://github.com/scs/substrate"
package = "substrate-transaction-pool"

[dependencies.network]
git = "https://github.com/scs/substrate"
package = "substrate-network"

[dependencies.babe]
git = "https://github.com/scs/substrate"
package = "substrate-consensus-babe"

[dependencies.babe-primitives]
git = "https://github.com/scs/substrate"
package = "substrate-consensus-babe-primitives"

[dependencies.grandpa]
git = "https://github.com/scs/substrate"
package = "substrate-finality-grandpa"

[dependencies.grandpa-primitives]
git = "https://github.com/scs/substrate"
package = "substrate-finality-grandpa-primitives"

[dependencies.basic-authorship]
git = "https://github.com/scs/substrate"
package = "substrate-basic-authorship"

[dependencies.contracts]
git = "https://github.com/scs/substrate"
package = "srml-contracts"

[dependencies.substratee-node-runtime]
path = "runtime"
features = ["enable_host_calls"]

[dependencies.substrate-client]
git = "https://github.com/scs/substrate"

[patch."https://github.com/paritytech/substrate"]
sr-io = { package = "sr-io", path = "sr-tee-io", default-features=false }
substrate-executor = { path = "substratee-executor", default-features=false}

[patch."https://github.com/scs/substrate"]
sr-io = { package = "sr-io", path = "sr-tee-io", default-features=false }
substrate-executor = { path = "substratee-executor", default-features=false}


[patch."https://github.com/scs/substrate.git"]
sr-io = { package = "sr-io", path = "sr-tee-io", default-features=false }
substrate-executor = { path = "substratee-executor", default-features=false}

[build-dependencies]
vergen = "3"



