[package]
name = "pow"
version = "0.1.0"
authors = ["alanpoon <brightshadowx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sr-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
consensus-pow-primitives = { package = "substrate-consensus-pow-primitives", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
consensus-pow = { package = "substrate-consensus-pow", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
client-api = { package = "substrate-client-api", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
sr-api = { package = "sr-api", git = "https://github.com/paritytech/substrate", default-features = false ,rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"}
codec = { package = "parity-scale-codec", version = "1.0.0" }
log = "0.4"
consensus-common = { package = "substrate-consensus-common", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate",rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5" }
lru-cache = "0.1"
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1.4"
rsrl = {path = "../../rsrl/rsrl"}
substratee-node-runtime = { path = "../runtime" }
pow-primitives = { path = "../primitives"}