[package]
name = "substratee-node-runtime"
version = "4.0.1"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"



[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.safe-mix]
default-features = false
version = "1.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.rstd]
default-features = false
git = "https://github.com/scs/substrate"
package = "sr-std"

[dependencies.sr-io]
default-features = false
path = '../sr-tee-io'
package = 'sr-io'

[dependencies.version]
default-features = false
git = "https://github.com/scs/substrate"
package = "sr-version"

[dependencies.support]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-support"

[dependencies.primitives]
default-features = false
git = "https://github.com/scs/substrate"
package = "substrate-primitives"

[dependencies.substrate-session]
default-features = false
git = "https://github.com/scs/substrate"

[dependencies.balances]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-balances"

[dependencies.babe]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-babe"

[dependencies.babe-primitives]
default-features = false
git = "https://github.com/scs/substrate"
package = "substrate-consensus-babe-primitives"

[dependencies.executive]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-executive"

[dependencies.indices]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-indices"

[dependencies.grandpa]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-grandpa"

[dependencies.system]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-system"

[dependencies.timestamp]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-timestamp"

[dependencies.sudo]
default-features = false
git = "https://github.com/scs/substrate"
package = "srml-sudo"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/scs/substrate"
package = "sr-primitives"

[dependencies.client]
default-features = false
git = "https://github.com/scs/substrate"
package = "substrate-client"

[dependencies.offchain-primitives]
default-features = false
git = "https://github.com/scs/substrate"
package = "substrate-offchain-primitives"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3" }

[features]
default = ["std"]
std = [
    "codec/std",
    "client/std",
    "rstd/std",
    "sr-io/std",
    "support/std",
    "balances/std",
    "babe/std",
    "babe-primitives/std",
    "executive/std",
    "indices/std",
    "grandpa/std",    
    "primitives/std",
    "sr-primitives/std",
    "system/std",
    "timestamp/std",
    "sudo/std",
    "version/std",
    "serde",
    "safe-mix/std",
    "offchain-primitives/std",
    "substrate-session/std",   
]
no_global_allocator = [
	"rstd/no_global_allocator",
]
no_panic_handler = [
    "sr-io/no_panic_handler"
]
no_oom = [
    "sr-io/no_oom"
]

enable_host_calls = [
    "sr-io/enable_host_calls",
]

no_std = [
]

[patch."https://github.com/paritytech/substrate"]
sr-io = { package = "sr-io", path = "../sr-tee-io", default-features = false}
substrate-executor = { path = "../substratee-executor", default-features = false}

[patch."https://github.com/scs/substrate"]
sr-io = { package = "sr-io", path = "../sr-tee-io", default-features = false}
substrate-executor = { path = "../substratee-executor", default-features = false}

[patch."https://github.com/scs/substrate.git"]
sr-io = { package = "sr-io", path = "../sr-tee-io", default-features = false}
substrate-executor = { path = "../substratee-executor", default-features = false}