[package]
name = "runtime-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
runtime_io = { package = "sr-io", path = "../../sr-tee-io", default-features = false }

#sandbox = { package = "sr-sandbox", path = "../../sr-sandbox", default-features = false }
[dependencies.sandbox]
default-features = false
package = 'sr-sandbox'
git = "https://github.com/scs/substrate"

#substrate-primitives = { path = "../../primitives", default-features = false }
[dependencies.substrate-primitives]
default-features = false
package = 'substrate-primitives'
git = "https://github.com/scs/substrate"

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []

